@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-26T08:20:57Z",
-  "count_outdated" : 304,
-  "uniques_outdated" : 154,
-  "count" : 321,
-  "uniques" : 166,
+  "timestamp" : "2022-08-26T16:22:16Z",
+  "count_outdated" : 311,
+  "uniques_outdated" : 160,
+  "count" : 328,
+  "uniques" : 171,
   "clones" : [
-    {
-      "timestamp": "2022-08-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 7 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 6 ]
-    },
     {
       "timestamp": "2022-08-17T00:00:00Z",
       "count": 1,
@@ -70,8 +63,8 @@
     },
     {
       "timestamp": "2022-08-26T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
