@@ -1,12 +1,7 @@
 {
   "count": 17,
-  "uniques": 5,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2022-08-12T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-08-17T00:00:00Z",
       "count": 1,
@@ -49,7 +44,7 @@
     },
     {
       "timestamp": "2022-08-26T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
